# rinha-backend2024q1

./: .env  Cargo.toml  Dockerfile  README.md  Rocket.toml  a.txt  compose.yml  nginx.conf  perf.data  perf.data.old  script.sql
src/: db.rs  get.rs  main.rs  post.rs
