[package]
name = "rinha-backend2024"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0", features=["json"]}
tokio-postgres = {version = "0.7.10", features = ["with-chrono-0_4"]}
deadpool-postgres ={version= "0.12.1", features = ["rt_tokio_1"] }
dotenvy = "*"
chrono = "*"
mimalloc = "0.1.39"
serde_json = "1.0"
simd-json = "0.13.8"

[profile.release]
debug = true
